--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ body{font-family: 'Quicksand', sans-serif;padding: 25px}
                             if(wht){
                             	await swals.fire(`Okeyyy`, `Nanti ${nama} Kirim Pesan Ini Ke WhatsApp ${author} Ya &#10084;&#65039;`);
                             	//nomor WhatsApp
-                                window.location = "https://api.whatsapp.com/send?phone=6289654811616&text=Hai Zel,%0ASweet Banget<3%0A%0AAku%20Udah%20Bacain%20Semuanya%20Makasih%20Sayang>,<";
+                                window.location = "https://api.whatsapp.com/send?phone=6285760451683&text=Hai Zel,%0ASweet Banget<3%0A%0AAku%20Mau%20Jadi%20Pacar%20Kamu%20Semoga%20Hubungan%20Kita%20Langgeng%20Sayang%20Mwuah";
                             } else {
                                 //gak ke wa
                                 await swals.fire('Oke. See You &#10084;&#65039;');
