--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <br />
             <p id="counter-times">times</p>
             <button id="counter-button" onclick="counterClick()">
-                Squish the kuru~!
+                Pencet Disini
             </button>
         </div>
         <hr />
@@ -43,25 +43,6 @@
             <noscript>Your browser does not support JavaScript or JavaScript has been
                 disabled.<br />This website relies on JavaScript, so please enable it
                 or use another browser.</noscript>
-        </div>
-    </div>
-    <div id="footer">
-        <a href="https://honkai-star-rail.fandom.com/wiki/Herta"><img id="herta-card" loading="lazy" src="img/card.webp" alt="" /></a>
-        <div id="footer-text">
-            <p>Herta gif made by</p>
-            <p>
-                <a href="https://twitter.com/kyouka_hashiba" target="_blank"><iconify-icon icon="mdi:twitter"
-                        id="twitter-footer-icon" class="footer-icon"></iconify-icon><span
-                        class="footer-icon-text">@kyouka_hashiba</span></a>
-            </p>
-            <p id="footer-repository-text">
-                You can check out the GitHub repository here:
-            </p>
-            <p>
-                <a href="https://github.com/Yuri-Neko" target="_blank"><iconify-icon icon="mdi:github"
-                        id="github-footer-icon" class="footer-icon"></iconify-icon><span
-                        class="footer-icon-text">herta_kuru</span></a>
-            </p>
         </div>
     </div>
 </body>
