--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Kuru Kuru~</title>
-    <meta name="description" content="The website for Herta, the cutest genius Honkai: Star Rail character out there.">
+    <meta name="description" content="Website Gabut Chara Herta Dari Honkai Star Rail">
     <meta name="keywords" content="Kuru2, Kuru Kuru, Kuru Kuru herta, kuru kuru herta hsr, kuru kuru herta star rail, herta honkai star rail, herta, herta hsr, star rail herta">
     <link rel="canonical" href="https://herta.vercel.app" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -23,11 +23,10 @@
         <h1>Kuru Kuru~</h1>
         <hr id="subtitle-seperator" />
         <h2>
-            The website for Herta, the cutest genius Honkai:
-            Star Rail character out there.
+            Website Gabut Chara Herta Dari Honkai Star Rail.
         </h2>
         <div id="counter-container">
-            <p>The kuru~ has been squished</p>
+            <p>Kururing ~ Kuru Kuru</p>
             <br />
             <br />
             <p id="counter">0</p>
