--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p id="counter">0</p>
             <br />
             <br />
-            <p id="counter-times">times</p>
+            <p id="counter-times">Times</p>
             <button id="counter-button" onclick="counterClick()">
                 Pencet Disini
             </button>
